Fixed headline image display to match the cropping in the mobile app.

--- a/Clients/Web/src/components/ui/Image.scss
+++ b/Clients/Web/src/components/ui/Image.scss
@@ -4,8 +4,12 @@
 
 .cover {
     background-size: cover;
+    background-position-x: center;
+    background-position-y: center;
 }
 
 .contain {
     background-size: contain;
+    background-position-x: center;
+    background-position-y: center;
 }
